Added winget installation.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
         
     - name: Install (windows)
       if: matrix.os == 'windows-latest'
-      run: winget install --locale DE --accept-source-agreements --accept-package-agreements win10pcap
+      run: choco install winget; winget install --locale DE --accept-source-agreements --accept-package-agreements win10pcap
         
     - name: Install (macos)
       if: matrix.os == 'macos-latest'
