--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
         
     - name: Install (windows)
       if: matrix.os == 'windows-latest'
-      run: choco install pcap
+      run: echo "Is pcap even needed?"
         
     - name: Install (macos)
       if: matrix.os == 'macos-latest'
